RPN-35: fix conflict
